fixed double border issue

--- a/_src/blocks/webview-table/webview-table.css
+++ b/_src/blocks/webview-table/webview-table.css
@@ -34,7 +34,7 @@
     text-align: center;
     font: bold 24px "Segoe UI";
     color: #F7F7F7;
-    margin: 2px 0 8px;
+    margin: 8px 0 2px;
 }
 
 .webview-comparison-header {
@@ -74,9 +74,7 @@
     width: 142px;
     padding: 8px;
     background: #141517;
-    border: 0.1px solid #3c3c3c;
-    border-left: none;
-    border-right: none;
+    border-top: 0.1px solid #3c3c3c;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -97,7 +95,6 @@
 }
 
 .webview-table div[role='row']:last-of-type div[role='cell'] {
-    border: hidden;
     .buy-box{
         .prod-oldprice{
             text-align: center;
@@ -124,7 +121,7 @@
 }
 .webview-table-wrapper .webview-table .button{
     justify-content: center;
-    border: 1px solid #006EFF;
+    border: 2px solid #006EFF;
     background-color: black;
     width: 122px;
     padding: 6px 16px;
